--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -287,12 +287,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: url(https://cloud.githubusercontent.com/assets/9211809/10264111/9db46e90-6a03-11e5-8243-7a2600be3398.png);
 }
 
 #header_wrap .inner {
