--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -287,7 +287,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: url(https://cloud.githubusercontent.com/assets/9211809/10264111/9db46e90-6a03-11e5-8243-7a2600be3398.png);
+  background: url('https://cloud.githubusercontent.com/assets/9211809/10264111/9db46e90-6a03-11e5-8243-7a2600be3398.png');
 }
 
 #header_wrap .inner {
