--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,7 +10,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #121213;
+  color: #1e6bb8;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -18,9 +18,9 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgb(119, 111, 111);
-  background-color: rgba(216, 212, 212, 0.08);
-  border-color: rgba(210, 202, 202, 0.2);
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
@@ -31,7 +31,7 @@ a {
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
-  background-color: rgb(119, 111, 111);
+  background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3); }
 
 @media screen and (min-width: 64em) {
@@ -53,13 +53,11 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
-
 .page-header {
-    color: #383232;
-    text-align: center;
-    /* background-color: #159957; */
-    background-image: url('https://cloud.githubusercontent.com/assets/9211809/10264111/9db46e90-6a03-11e5-8243-7a2600be3398.png');
-}
+  color: #fff;
+  text-align: center;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -114,7 +112,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #e14d6d; }
+  color: #159957; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -131,7 +129,9 @@ a {
   font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
   color: #567482;
   word-wrap: normal;
-  background-color: rgba(0, 0, 0, 0.04); }
+  background-color: #f3f6fa;
+  border: solid 1px #dce6f0;
+  border-radius: 0.3rem; }
   .main-content pre > code {
     padding: 0;
     margin: 0;
