--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -49,7 +49,7 @@ margin-left: 0; } }
 color: #383232;
 text-align: center;
 /* background-color: #159957; */
-background-image: url(‘https://cloud.githubusercontent.com/assets/9211809/10264200/f63fb8a2-6a04-11e5-97a7-2d2503638e7c.png');
+background-image: url(‘https://cloud.githubusercontent.com/assets/9211809/10264200/f63fb8a2-6a04-11e5-97a7-2d2503638e7c.png‘);
 }
 @media screen and (min-width: 64em) {
 .page-header {
